RESOLVED FIXED206773
[LFC][IFC] (Regression) LayoutTests/fast/text/whitespace/029.html fails
https://bugs.webkit.org/show_bug.cgi?id=206773
Summary [LFC][IFC] (Regression) LayoutTests/fast/text/whitespace/029.html fails
alan
Reported 2020-01-24 15:17:07 PST
ssia
Attachments
Patch (4.09 KB, patch)
2020-01-24 15:37 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2020-01-24 15:17:22 PST
alan
Comment 2 2020-01-24 15:37:03 PST
WebKit Commit Bot
Comment 3 2020-01-24 17:07:27 PST
Comment on attachment 388732 [details] Patch Clearing flags on attachment: 388732 Committed r255107: <https://trac.webkit.org/changeset/255107>
WebKit Commit Bot
Comment 4 2020-01-24 17:07:29 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.