[LFC][IFC] (Regression) LayoutTests/fast/text/whitespace/029.html fails https://bugs.webkit.org/show_bug.cgi?id=206773 <rdar://problem/58883388>

Reviewed by Simon Fraser.

While line break is an inline box, it does not have inline content so do not try to cast it to Container.

* layout/inlineformatting/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::computedIntrinsicWidthConstraints):
(WebCore::Layout::InlineFormattingContext::collectInlineContentIfNeeded):


Canonical link: https://commits.webkit.org/219772@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255107 268f45cc-cd09-0410-ab3c-d52691b4dbfc